Bug 151767 - The table border isn't displayed if the file imported from Powerpoint
Summary: The table border isn't displayed if the file imported from Powerpoint
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Tibor Nagy
URL:
Whiteboard: target:7.5.0
Keywords: filter:pptx
: 134098 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-10-26 11:49 UTC by NISZ LibreOffice Team
Modified: 2022-10-28 06:42 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
PPTX file for testing (created in PowerPoint) (34.43 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2022-10-26 11:50 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2022-10-26 11:49:36 UTC
Description:
When I create a table in PowerPoint and after that I click the down arrow next to the "Table styles" and chose the "Clear table" and save it.
When I open the saved pptx in Impress the table border isn't displayed but the table is there. 

Steps to Reproduce:
1. Create a new pptx file in PowerPoint
2. Click Insert menu
3. Click Table and chose an arbitrary table size
4. Click the down arrow button next to the "Table styles" 
5. Click "Clear Table"
6. Save as pptx

Actual Results:
When I open the created document in LO the Table border isn't displayed.

Expected Results:
The table border should be visible.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 17dfc9a9da009cc23d2222e3fb4e2cef9c97d581
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 1 NISZ LibreOffice Team 2022-10-26 11:50:35 UTC
Created attachment 183280 [details]
PPTX file for testing (created in PowerPoint)
Comment 2 Commit Notification 2022-10-27 18:35:59 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d83a016823dceaeb48f34d4e94f9a230bebd9169

tdf#151767 PPTX import: fix table border width

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Tibor Nagy 2022-10-28 06:17:08 UTC
*** Bug 134098 has been marked as a duplicate of this bug. ***
Comment 4 NISZ LibreOffice Team 2022-10-28 06:42:31 UTC
Verified in:
Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 02db1642c9ce4394f4f85755c4a0a831e547e4fb
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded