tdf#151767 PPTX import: fix table border width

There is a "Clear Table" function in PP. In this case,
the table uses the default border value of MSO, which
was imported as missing table border.

(Note: commit ff0387e726b59e374029d2f635ce00308d99eff6
"tdf#135843: sd_export_tests-ooxml3: Add unittest for the
export part" If attachment from tdf#106011 is opened in
PowerPoint, the table is visible it, but was not in LO.
This patch fixed that. Therefore the borders of table are
not missing after export.)

Change-Id: I92dfe2e42f5f58b15af23cc24e931fb12d7c2794
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/141880
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>